--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: chmod +x render_build.sh && ./render_build.sh
-    startCommand: gunicorn myday.wsgi:application --workers=1 --threads=8 --timeout=0
+    startCommand: chmod +x startup.sh && ./startup.sh gunicorn myday.wsgi:application --workers=1 --threads=8 --timeout=0
     envVars:
       - key: DJANGO_DEBUG
         value: False
@@ -24,6 +24,8 @@ services:
         value: 0
       - key: PYTHONUNBUFFERED
         value: 1
+      - key: RENDER
+        value: true
     autoDeploy: true
     healthCheckPath: /
     numInstances: 1
