Add comprehensive deployment scripts and documentation

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 # Django settings
-# Use this for production
-# DJANGO_SETTINGS_MODULE=myday.settings_prod
 DJANGO_SECRET_KEY=your-secret-key-here
 DJANGO_DEBUG=False
-ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
+ALLOWED_HOSTS=yourdomain.onrender.com,localhost,127.0.0.1
+RENDER=true
 
-# Database settings (if using a different database)
-# DATABASE_URL=postgres://user:password@localhost:5432/mydaydb
+# Database settings
+DATABASE_URL=postgres://user:password@localhost:5432/mydaydb
 
 # Cloudinary settings
 CLOUDINARY_CLOUD_NAME=your-cloud-name
